split Services into multiple smaller ones, add movie rating, comment reaction and comments
