# api/src/main/java/com/moviehub/entity/CommentReaction.java
@@ -1,0 +1,47 @@
+package com.moviehub.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.ForeignKey;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@Builder
+public class CommentReaction {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    private String id;
+
+    @ManyToOne
+    @JoinColumn(
+        name = "comment_id",
+        referencedColumnName = "id",
+        foreignKey = @ForeignKey(name = "fk_comment")
+    )
+    private Comment comment;
+
+    @Column(
+        nullable = false
+    )
+    private String userId;
+
+    @Enumerated(EnumType.STRING)
+    private ReactionType reactionType;
+
+}
