# api/src/main/java/com/moviehub/entity/ReactionType.java
@@ -1,0 +1,7 @@
+package com.moviehub.entity;
+
+public enum ReactionType {
+    LIKE,
+    DISLIKE,
+    NONE
+}
