# api/src/main/resources/static/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Movie Manager
-  description: A movie manager API.
+  title: Movie Hub
+  description: A Movie Hub API.
   version: '1.0'
 servers:
   - url: http://localhost:8080
@@ -140,7 +140,7 @@ components:
         type: string
         default: "like:"
         example: "like:scary"
-        maxLength: 1100
+        maxLength: 100
     rating:
       name: rating
       in: query
@@ -293,6 +293,28 @@ components:
         default: ""
         maxLength: 100
 
+    commentSort:
+      name: sort
+      in: query
+      description: |
+        Only valid sort key is 'createdAt'.
+        It can be sorted by either: asc (ascending order) or desc (descending order).
+        Example usage: ?sort=createdAt.asc.
+      schema:
+        type: string
+        default: "createdAt.asc"
+        example: "createdAt.asc"
+        maxLength: 200
+
+    commentId:
+      name: commentId
+      in: path
+      required: true
+      schema:
+        type: string
+      description: The comment ID.
+      example: c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5
+
     directorId:
       name: directorId
       in: path
@@ -342,6 +364,13 @@ components:
 
     404MovieNotFound:
       description: Movie not found.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ProblemDetail'
+
+    404CommentNotFound:
+      description: Comment not found.
       content:
         application/json:
           schema:
@@ -433,7 +462,6 @@ components:
         This field can contain up to 1000 characters to provide a comprehensive overview.
       example: Paranormal investigators Ed and Lorraine Warren work to help a family terrorized by a dark presence in their farmhouse.
       minLength: 1
-      maxLength: 1000
       nullable: false
     MovieRating:
       type: number
@@ -549,6 +577,34 @@ components:
       minLength: 1
       maxLength: 15
       nullable: false
+
+    CreatedAt:
+      type: string
+      format: date-time
+      description: |
+        The creation date of a comment.
+      example: "2017-07-21T17:32:28Z"
+      nullable: false
+    Text:
+      type: string
+      example: "Very interesting movie"
+      minLength: 1
+      nullable: false
+
+    ReactionTypeRequest:
+      type: object
+      properties:
+        reactionType:
+          type: string
+          enum:
+            - Like
+            - Dislike
+            - None
+          description: |
+            The reaction to the comment.
+            This field includes predefined values such as Like, Dislike or None.
+          example: Like
+          nullable: false
 
     SortDTO:
       type: object
@@ -817,6 +873,59 @@ components:
             If `true`, the page has no items; otherwise, it has content.
           example: false
 
+    CommentPage:
+      type: object
+      description: "Represents a page of comments, including pagination and sorting information."
+      properties:
+        content:
+          type: array
+          description: "List of comments."
+          items:
+            $ref: '#/components/schemas/CommentDetailsResponse'
+        pageable:
+          $ref: '#/components/schemas/PageableDTO'
+        last:
+          type: boolean
+          description: |
+            A boolean value indicating whether this is the last page of data.
+            If `true`, it is the last page; otherwise, it's not the last page.
+          example: false
+        totalElements:
+          type: integer
+          format: int64
+          description: "The total number of items."
+          example: 4
+        totalPages:
+          type: integer
+          description: "The total number of pages needed to display all the data based on the page size."
+          example: 2
+        first:
+          type: boolean
+          description: |
+            A boolean value indicating whether this is the first page of data.
+            If `true`, it is the first page; otherwise, it's not the first page.
+          example: true
+        size:
+          type: integer
+          description: "The maximum number of items contained on each page."
+          example: 2
+        number:
+          type: integer
+          description: "The page number for the current page."
+          example: 0
+        sort:
+          $ref: '#/components/schemas/SortDTO'
+        numberOfElements:
+          type: integer
+          description: "The number of items on the current page."
+          example: 2
+        empty:
+          type: boolean
+          description: |
+            A boolean value indicating whether the current page is empty.
+            If `true`, the page has no items; otherwise, it has content.
+          example: false
+
     # TODO: requests
 
     MovieRequest:
@@ -881,6 +990,15 @@ components:
         It allows partial updates to movie information based on the existing schema.
       allOf:
         - $ref: '#/components/schemas/MovieRequest'
+
+    AddCommentRequest:
+      type: object
+      description: Schema for the requst body when creating a comment.
+      properties:
+        text:
+          $ref: '#/components/schemas/Text'
+        parentCommentId:
+          $ref: '#/components/schemas/Uuid'
 
     DirectorRequest:
       type: object
@@ -1101,6 +1219,21 @@ components:
         gender:
           $ref: '#/components/schemas/GenderName'
 
+    CommentDetailsResponse:
+      type: object
+      description: Contains detailed information about a comment.
+      properties:
+        id:
+          $ref: '#/components/schemas/Uuid'
+        movieId:
+          $ref: '#/components/schemas/Uuid'
+        userId:
+          $ref: '#/components/schemas/Uuid'
+        createdAt:
+          $ref: '#/components/schemas/CreatedAt'
+        text:
+          $ref: '#/components/schemas/Text'
+
     GenreListResponse:
       type: object
       description: Provides a list of all genres available in the system.
@@ -1297,11 +1430,7 @@ paths:
               type: object
               properties:
                 rating:
-                  type: number
-                  format: float
-                  example: 7.5
-                  minimum: 0
-                  maximum: 10
+                  $ref: '#/components/schemas/MovieRating'
       responses:
         '200':
           description: Successfully updated the movie rating.
@@ -1309,7 +1438,79 @@ paths:
           $ref: '#/components/responses/404MovieNotFound'
 
   /movies/{movieId}/comments:
-  # TODO: implement this with paging, sorted by createdAt column
+    post:
+      description: Add a comment for the specified movie.
+      summary: Add comment
+      operationId: addComment
+      tags:
+        - movies
+      parameters:
+        - $ref: '#/components/parameters/movieId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddCommentRequest'
+      responses:
+        '200':
+          description: Sucessfully added a comment for the specified movie.
+
+    get:
+      description: Retrieve a list of comments of the specified movie.
+      summary: List comments
+      operationId: getComments
+      tags:
+        - movies
+      parameters:
+        - $ref: '#/components/parameters/movieId'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/commentSort'
+      responses:
+        '200':
+          description: Successfully retrieved a list of comments of the specified movie.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CommentPage'
+        '404':
+          $ref: '#/components/responses/404MovieNotFound'
+
+  /comments/{commentId}:
+    delete:
+      description: Delete a comment with the specified ID.
+      summary: Delete comment
+      operationId: deleteComment
+      tags:
+        - comments
+      parameters:
+        - $ref: '#/components/parameters/commentId'
+      responses:
+        '204':
+          description: Successfully deleted a comment with the given ID.
+        '404':
+          $ref: '#/components/responses/404CommentNotFound'
+
+  /comments/{commentId}/reaction:
+    post:
+      description: Add a reaction (like or dislike) for a comment with the specified ID.
+      summary: Add a reaction to a comment
+      operationId: addCommentReaction
+      tags:
+        - comments
+      parameters:
+        - $ref: '#/components/parameters/commentId'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReactionTypeRequest'
+      responses:
+        '204':
+          description: Successfully reacted to the specified comment.
+        '404':
+          $ref: '#/components/responses/404CommentNotFound'
 
   /directors:
     post:
